fix: Align page with top app bar

--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -23,6 +23,11 @@
   color: #56657F;
 }
 
+.main-body {
+  width: 95%;
+  margin: auto;
+}
+
 div.end {
   bottom: 10px;
   width: 50%;
