--- a/client/src/app/components/toolbar/toolbar.component.scss
+++ b/client/src/app/components/toolbar/toolbar.component.scss
@@ -5,9 +5,7 @@
   margin-left: 30px;
 }
 
-.max-size {
-  width: 95%;
-  margin: auto;
+.tool-bar {
   background: #FFFFFF;
   border: 1px solid #EAEAEB;
 }
